--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "node ./server/server.cjs",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -12,11 +13,16 @@
   "dependencies": {
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "express": "^4.18.2",
     "html2canvas": "^1.4.1",
+    "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.7.1",
+    "openai": "^4.0.0",
+    "puppeteer": "^21.3.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-screen-capture": "^1.1.1",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
